# SlimeTora

./: .eslintrc.js  .gitignore  .prettierrc  LICENSE  README.md  build.txt  dongle.js  flake.nix  forge.config.js  index.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  shell.nix  store.json  tsconfig.json  vite.config.js  webpack.main.config.ts
.github/workflows/: build-mac-arm64.yml  build-mac-x64.yml  build-mac.yml  build-ubuntu.yml  build-windows.yml  build.yml  manual-build.yml
src/: app.css  app.html  index.css  index.css.map  index.html  index.js  index.scss  index.ts  main.js  main.ts  preload.js  preload.mts  preload.ts  renderer.js  renderer.ts  settings.html  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/lang/: en.json  ja.json  jp.json  pt-br.json
src-tauri/src/: ble.rs  lib.rs  main.rs  serial.rs  util.rs
src-tauri/src/connection/: ble.rs  serial.rs  slimevr.rs
src-tauri/src/interpreters/: common.rs  core.rs  haritorax_2.rs  haritorax_wired.rs  haritorax_wireless.rs
src/languages/: UwU.json  en.json  it.json  jp.json
src/lib/backend/: base.ts  core.ts  haritorax-2.ts  haritorax-wireless.ts  index.ts  notifications.ts  tracker.ts
src/lib/components/: Header.svelte  Navbar.svelte  Toast.svelte
src/lib/connection/: ble.svelte.ts  connection.svelte.ts  index.ts  serial.svelte.ts
src/lib/lang/: en.json  index.ts
src/lib/log/: index.ts
src/lib/store/: ToastProvider.ts  index.ts  settings.ts
src/lib/types/: connection.ts  tracker.ts
src/routes/: +layout.svelte  +layout.ts
src/routes/(main)/: +layout.svelte  +page.svelte
src/routes/onboarding/: +page.svelte
src/static/: tracker.fbx
src/static/css/: index.css  index.css.map  index.scss
src/static/html/: index.html  onboarding.html  pairing.html  settings.html  visualization.html
src/static/images/: icon.icns
src/static/js/: index.ts  onboarding.ts  pairing.ts  settings.ts
src/static/languages/: en.json  it.json  jp.json
src/static/locales/: en.json  (+1 more)
tracker/: dongle.js  index.html  quaternion.js  script.js  styles.css  tracker.fbx  visualization.html
(+41 files in other folders)
