[package]
name = "slimetora"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-prevent-default = { version = "1.2", features = ["unstable-windows"] }
tauri-plugin-btleplug = { git = "https://github.com/Dreaming-Codes/tauri-plugin-btleplug", version = "0.0.0" }
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2"
once_cell = "1.21.3"
serialport = "4.7.1"
base64 = "0.22.1"
byteorder = "1.5.0"
hex = "0.4.3"
nalgebra = "0.33.2"

