[package]
name = "slimetora"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-prevent-default = { version = "1.2", features = ["unstable-windows"] }
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2"
once_cell = "1.21.3"
serialport = "4.7.1"
base64 = "0.22.1"
byteorder = "1.5.0"
hex = "0.4.3"
nalgebra = "0.33.2"
firmware_protocol = { git = "https://github.com/JovannMC/SlimeVR-Rust", package = "firmware_protocol", branch = "more-packets" }
tracker_emulation-rs = { path = "C:/Users/JovannMC/Desktop/Desktop/GitHub_Projects/tracker_emulation-rs" }
dashmap = "6.1.0"
async-trait = "0.1.88"
open = "5.3.2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
log = "0.4.27"
dirs = "6.0.0"
chrono = "0.4.41"
tauri-plugin-fs = "2"
uuid = "1.0"
tauri-plugin-blec = { path = "C:/Users/JovannMC/Desktop/Desktop/GitHub_Projects/tauri-plugin-blec" }
